--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "@pnpm/npm-conf",
-	"version": "3.0.2",
+	"name": "fca-arsh",
+	"version": "1.0.1",
 	"description": "Get the npm config",
 	"license": "MIT",
 	"repository": "pnpm/npm-conf",
